# advent2023

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  generate_bins.sh
.github/workflows/: main.yml
advent2023-macros/: Cargo.toml
advent2023-macros/src/: lib.rs  makebenches.rs  makefunc.rs  maketests.rs  util.rs
benches/: bench_main.rs
makebench/: Cargo.toml
makebench/src/: lib.rs
maketest/: Cargo.toml
maketest/src/: lib.rs
src/: bin.rs  day4p2.rs  day6.rs  day7.rs  lib.rs  parser.rs  types.rs
src/parser/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs
