[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
rayon = "1.8.0"

[dev-dependencies]
criterion = {version = "0.4", features=["html_reports"]}
test-case = "3.3"

[lib]
bench = false

[[bench]]
name = "bench_main"
harness = false

[[bin]]
name = "day1"

[[bin]]
name = "day1p2"

[[bin]]
name = "day2"

[[bin]]
name = "day2p2"

[[bin]]
name = "day3"

[[bin]]
name = "day3p2"
