workspace = { members = ["advent2023-macros"] }

[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="^4.4", features=["derive"]}
nom = "^7.1"
rayon = "^1.8"
advent2023-macros = {path="./advent2023-macros"}

[build-dependencies]
nom = "^7.1"

[dev-dependencies]
criterion = {version="^0.4", features=["html_reports"]}
test-case = "^3.3"

[lib]
bench = false

[[bench]]
name = "bench_main"
harness = false

[[bin]]
name = "aoc"
path = "src/bin.rs"
