[package]
name = "advent2023-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = {version="^0.11", features=["macros"]}
proc-macro2 = "^1.0"
quote = "^1.0"
syn = {version = "^2.0", features = ["full", "extra-traits"]}

[dev-dependencies]
test-case = "3.3"

[lib]
proc-macro = true
